--- a/invenio/modules/uploader/recordext/fields/files.cfg
+++ b/invenio/modules/uploader/recordext/fields/files.cfg
@@ -22,6 +22,7 @@ files_to_upload:
     schema:
         {'files_to_upload': {
             'type': 'list',
+            'default': list,
             'schema': {
                 'type': 'dict',
                 'schema': {
