--- a/invenio/modules/records/contrib/marc/fields/00X.cfg
+++ b/invenio/modules/records/contrib/marc/fields/00X.cfg
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 ##
 ## This file is part of Invenio.
-## Copyright (C) 2013 CERN.
+## Copyright (C) 2014 CERN.
 ##
 ## Invenio is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -17,11 +17,9 @@
 ## along with Invenio; if not, write to the Free Software Foundation, Inc.,
 ## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
 
-@persistent_identifier(0)
+@extend
 recid:
-    """ """
-    schema:
-        {'recid': {'type':'integer', 'min': 1, 'required': True}}
+    """Record ID extracted from MARC21."""
     creator:
         @legacy(('001', ''), )
         @connect('_id')
@@ -31,10 +29,9 @@ recid:
 
 @extend
 modification_date:
-    """
-    Date and time of the last modification of the record.
+    """Date and time of the last modification of the record.
 
-    In marc that means the ``005`` only if the record id, ``001`` is present in
+    In marc that means the ``005`` only if the record id ``001`` is present in
     the input.
     """
     creator:
@@ -45,15 +42,18 @@ modification_date:
         @only_if('modification_date' not in self)
         get_modification_date(self.get('recid', -1))
     producer:
-        json_for_marc(), {"005": "self.get('modification_date').strftime('%Y%m%d%H%M%S.0')"}
+        json_for_marc(), {'005': "self.get('modification_date').strftime('%Y%m%d%H%M%S.0')"}
 
 @extend
 creation_date:
-    """
-    Date and time of the creation of the record.
+    """Date and time of the creation of the record.
 
-    In marc, if the record contains a ``005`` tag and not a record id, ``001``
+    In marc, if the record contains a ``005`` tag and not a record id, ``001``,
     ``005`` will be considered as creation date.
+
+    Otherwise, if ``001`` is found in the input marc, it tries to get the
+    creation time from the DB, if the record is not found on the DB it will
+    store an error on ``record.continuable_errors``.
     """
     creator:
         @parse_first('recid')
@@ -62,4 +62,12 @@ creation_date:
     derived:
         @depends_on('recid')
         get_creation_date(self.get('recid', -1))
+
+@extend
+control_number_identifier:
+    creator:
+        @legacy(('003', ''), )
+        marc, '003', value
+    producer:
+        json_for_marc(), {'001': ''}
 
