--- a/invenio/modules/records/contrib/marc/fields/70X-75X.cfg
+++ b/invenio/modules/records/contrib/marc/fields/70X-75X.cfg
@@ -16,20 +16,11 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Invenio; if not, write to the Free Software Foundation, Inc.,
 ## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
-_first_author, creator:
-    creator:
-        @legacy((("100", "100__", "100__%"), ""),
-                ("100__a", "first author name", "full_name"),
-                ("100__e", "relator_name"),
-                ("100__h", "CCID"),
-                ("100__i", "INSPIRE_number"),
-                ("100__u", "first author affiliation", "affiliation"))
-        marc, "100__", { 'full_name':value['a'], 'first_name':util_split(value['a'],',',1), 'last_name':util_split(value['a'],',',0), 'relator_name':value['e'], 'CCID':value['h'], 'INSPIRE_number':value['i'], 'affiliation':value['u'] }
-    producer:
-        json_for_marc(), {"100__a": "full_name", "100__e": "relator_name", "100__h": "CCID", "100__i": "INSPIRE_number", "100__u": "affiliation"}
-        json_for_dc(), {"dc:creator": "full_name"}
 
-_additional_authors, contributor:
+@extend
+_additional_authors:
+    schema:
+        {'_additional_authors': {'type': 'list', 'force': True}}
     creator:
         @legacy((("700", "700__", "700__%"), ""),
                 ("700__a", "additional author name", "full_name"),
@@ -40,11 +31,15 @@ _additional_authors, contributor:
         json_for_marc(), {"700__a": "full_name", "700__e": "relator_name", "700__h": "CCID", "700__i": "INSPIRE_number", "700__u": "affiliation"}
         json_for_dc(), {"dc:contributor": "full_name"}
 
-authors:
-    """List with all the authors, connected with main_author and rest_authors"""
-    derived:
-        @parse_first('_first_author', '_additional_authors')
-        @connect('_first_author', sync_authors)
-        @connect('_additional_authors', sync_authors)
-        @only_if('_firs_author' in self or '_additional_authors' in self)
-        util_merge_fields_info_list(self, ['_first_author', '_additional_authors'])
+@extend
+_additional_corporate_names:
+    schema:
+        {'_additional_corporate_names': {'type': 'list', 'force': True}}
+    creator:
+        @legacy((("710", "710__", "710__%"), ""),
+                ("710__a", "name"),
+                ("710__b", "subordinate_unit"),
+                ("710__g", "collaboration", "collaboration"))
+        marc, "710__", {'name':value['a'], 'subordinate_unit':value['b'], 'collaboration':value['g']}
+    producer:
+        json_for_marc(), {"710__a":"name", "710__b":"subordinate_unit", "710__":"collaboration"}
