--- a/invenio/modules/records/contrib/marc/fields/20X-24X.cfg
+++ b/invenio/modules/records/contrib/marc/fields/20X-24X.cfg
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 ##
 ## This file is part of Invenio.
-## Copyright (C) 2013, 2014 CERN.
+## Copyright (C) 2014 CERN.
 ##
 ## Invenio is free software; you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -16,13 +16,3 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Invenio; if not, write to the Free Software Foundation, Inc.,
 ## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
-
-"""
-Base test
-"""
-extensions:
-    'invenio.modules.jsonalchemy.testsuite.extension_classes:Class1'
-
-fields:
-    _id
-    modification_date
